chore(examples): fix filters buttons on mobile

--- a/examples/e-commerce/src/app.css
+++ b/examples/e-commerce/src/app.css
@@ -257,6 +257,7 @@ mark {
   font: inherit;
   margin-left: 1rem;
   margin-right: 0;
+  position: relative;
 }
 
 .ais-ToggleRefinement-checkbox:checked::before {
