--- a/examples/e-commerce/src/app.mobile.css
+++ b/examples/e-commerce/src/app.mobile.css
@@ -6,6 +6,7 @@
     border-radius: 16px;
     left: 0;
     max-width: initial;
+    padding-bottom: 4rem;
     position: fixed;
     top: 0;
     transform: translateY(120vh);
@@ -13,19 +14,6 @@
     width: 100%;
     will-change: transform;
     z-index: 1;
-  }
-
-  .container-filters .container-body,
-  .container-filters .container-filters-footer {
-    opacity: 0;
-    transition: opacity 300ms ease-in;
-    transition-delay: 200ms;
-  }
-
-  .filtering .container-filters .container-body,
-  .filtering .container-filters .container-filters-footer {
-    opacity: 1;
-    transition-delay: 0ms;
   }
 
   .container-filters .container-header,
@@ -41,7 +29,9 @@
     transform: translateX(-50%);
   }
 
-  .filtering .header-title {
+  .filtering .header-title,
+  .filtering .container-results,
+  .container-filters-footer {
     display: none;
   }
 
@@ -50,18 +40,15 @@
     transform: translateY(4rem);
   }
 
-  .filtering .container-results {
-    display: none;
-  }
-
-  .container-filters-footer {
+  .filtering .container-filters-footer {
     background-color: #fff;
     border-top: 1px solid #ebecf3;
-    bottom: 4rem;
+    bottom: 0;
     display: flex;
     justify-content: space-between;
+    margin: 0 -2rem;
     padding: 1rem;
-    position: sticky;
+    position: fixed;
     width: 100%;
     z-index: 1;
   }
